# osyris-python

./: .gitignore  LICENSE  README.md  pyproject.toml
src/osyris/: __init__.py  async_client.py  client.py  config.py  exceptions.py
src/osyris/cli/: main.py  utils.py
src/osyris/cli/commands/: __init__.py  login.py  sync.py  workspace.py
src/osyris/http/: __init__.py  async_client.py  client.py  retry.py
src/osyris/models/: __init__.py  conversation.py  file.py  workspace.py
src/osyris/resources/: __init__.py  conversations.py  files.py  workspaces.py
src/osyris/sync/: __init__.py  engine.py  hasher.py  state.py  watcher.py
tests/: test_client.py  test_resources.py  test_sync.py
