[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "osyris"
version = "0.1.0"
description = "Osyris Python SDK"
requires-python = ">=3.9"
dependencies = [
    "requests",
    "watchdog",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
osyris = "osyris.cli.main:main"
